--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <button id='add'>添加拼音</button>
-    <div id="container" class="container"></div>
+    <!-- <button id='add'>添加拼音</button>
+    <div id="container" class="container"></div> -->
   </body>
   <script>
 
@@ -60,26 +60,26 @@
       // b();
 
 
-  const onOk = ({data, html}) => {
-    return new Promise((resolve, reject) => {
-      setTimeout(() => {
-        document.getElementById("container").innerHTML = html;
-        resolve(true)
-      }, 800);
-    });
-  }
+  // const onOk = ({data, html}) => {
+  //   return new Promise((resolve, reject) => {
+  //     setTimeout(() => {
+  //       document.getElementById("container").innerHTML = html;
+  //       resolve(true)
+  //     }, 800);
+  //   });
+  // }
 
-  const addBtn = document.querySelector('#add')
-  addBtn.addEventListener('click', () => {
-    typeof PinYin !== "undefined" && PinYin({
-      data: undefined,
-      onSubmit: onOk // promise
-    })
-  });
+  // const addBtn = document.querySelector('#add')
+  // addBtn.addEventListener('click', () => {
+  //   typeof PinYin !== "undefined" && PinYin({
+  //     data: undefined,
+  //     onSubmit: onOk // promise
+  //   })
+  // });
 
-  typeof PinYin !== "undefined" && PinYin({
-    data: undefined,
-    onSubmit: onOk // promise
-  });
+  // typeof PinYin !== "undefined" && PinYin({
+  //   data: undefined,
+  //   onSubmit: onOk // promise
+  // });
   </script>
 </html>
